clear some warnings